--- a/setup.cfg
+++ b/setup.cfg
@@ -6,12 +6,12 @@ max-line-length = 120
 atomic=true
 combine_as_imports=false
 indent=4
-known_standard_library=token,tokenize,enum,importlib
-known_third_party=django,six
-line_length=120
+sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
+known_django = django, rest_framework, graphene, graphql, graphene_django, modelcluster, modeltrans, wagtail
+line_length=80
 multi_line_output=5
 skip=migrations
-wrap_length=120
+wrap_length=80
 
 [pep8]
 max-line-length = 120
@@ -27,3 +27,13 @@ addopts = --cov aplans --cov actions --cov indicators --cov users --cov insight 
 filterwarnings =
     ignore::django.utils.deprecation.RemovedInDjango40Warning
     ignore::DeprecationWarning:graphene
+
+[mypy]
+plugins =
+    mypy_django_plugin.main
+
+[mypy.plugins.django-stubs]
+django_settings_module = "aplans.settings"
+
+[mypy-factory.*]
+ignore_missing_imports = True
