--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -4,6 +4,7 @@ ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 ENV STATIC_ROOT /srv/static
 ENV MEDIA_ROOT /srv/media
+ENV DEBIAN_FRONTEND="noninteractive" TZ="Europe/Helsinki"
 
 RUN mkdir /code
 RUN mkdir -p /srv/media
@@ -40,6 +41,14 @@ RUN pip install ipython
 COPY package.json package-lock.json /code/
 WORKDIR /code
 RUN npm install
+
+ARG EXTRA_PYPI_INDEX
+ENV EXTRA_PYPI_INDEX $EXTRA_PYPI_INDEX
+ARG EXTRA_INSTALLED_APPS_VERSIONS
+ENV EXTRA_INSTALLED_APPS_VERSIONS $EXTRA_INSTALLED_APPS_VERSIONS
+
+# Install extra dependencies
+RUN if [ ! -z "$EXTRA_INSTALLED_APPS_VERSIONS" ] ; then pip install --extra-index-url "${EXTRA_PYPI_INDEX}" $EXTRA_INSTALLED_APPS_VERSIONS ; fi
 
 COPY . /code/
 RUN ./manage.py collectstatic --no-input
