--- a/requirements.in
+++ b/requirements.in
@@ -20,7 +20,7 @@ easy-thumbnails
 Pillow
 sentry-sdk
 graphene-django
-graphene-django-optimizer
+graphene-django-optimizer==0.8.0
 aniso8601
 wagtail-condensedinlinepanel
 django-admin-numeric-filter
