Pass CONFIGURE_LOGGING env variable to docker container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,7 @@ services:
       - INTERNAL_IPS
       - SENTRY_DSN
       - SECRET_KEY
+      - CONFIGURE_LOGGING
       - OIDC_ISSUER_URL
       - OIDC_CLIENT_ID
       - OIDC_CLIENT_SECRET
