--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,8 @@ norecursedirs = node_modules data .git venv Attic
 addopts = --cov aplans --cov actions --cov indicators --cov users --cov insight --cov  people
 filterwarnings =
     ignore::django.utils.deprecation.RemovedInDjango40Warning
+    ignore::django.utils.deprecation.RemovedInDjango41Warning
+    ignore::wagtail.utils.deprecation.RemovedInWagtail217Warning
     ignore::DeprecationWarning:admin_list_controls
     ignore::DeprecationWarning:easy_thumbnails
     ignore::DeprecationWarning:graphene
