--- a/requirements-dev.in
+++ b/requirements-dev.in
@@ -1,9 +1,9 @@
 -c requirements.txt
 pywatchman
-python-language-server[Rope,Pyflakes,McCabe,YAPF]
+#python-language-server[Rope,Pyflakes,McCabe,YAPF]
 isort
 autopep8
-flake8<3.9
+flake8
 ipython
 pip-tools
 pylint
