--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -8,48 +8,45 @@ asgiref==3.4.1
     # via
     #   -c requirements.txt
     #   django
-astroid==2.8.4
+astroid==2.9.0
     # via pylint
-autopep8==1.5.4
+autopep8==1.6.0
     # via -r requirements-dev.in
 backcall==0.2.0
     # via ipython
-click==7.1.2
+click==8.0.3
     # via pip-tools
-decorator==4.4.2
+decorator==5.1.0
     # via ipython
 django-stubs-ext==0.3.1
     # via django-stubs
 django-stubs==1.9.0
     # via -r requirements-dev.in
-django==3.1.13
+django==3.2.9
     # via
     #   -c requirements.txt
     #   django-stubs
     #   django-stubs-ext
-flake8==3.8.4
+flake8==4.0.1
     # via -r requirements-dev.in
 graphene-stubs==0.15
     # via -r requirements-dev.in
-ipython-genutils==0.2.0
-    # via traitlets
-ipython==7.19.0
+ipython==7.30.0
     # via -r requirements-dev.in
-isort==5.7.0
+isort==5.10.1
     # via
     #   -r requirements-dev.in
     #   pylint
-jedi==0.17.2
-    # via
-    #   ipython
-    #   python-language-server
+jedi==0.18.1
+    # via ipython
 lazy-object-proxy==1.6.0
     # via astroid
+matplotlib-inline==0.1.3
+    # via ipython
 mccabe==0.6.1
     # via
     #   flake8
     #   pylint
-    #   python-language-server
 mypy-extensions==0.4.3
     # via mypy
 mypy==0.910
@@ -57,55 +54,45 @@ mypy==0.910
     #   -r requirements-dev.in
     #   django-stubs
     #   graphene-stubs
-parso==0.7.1
+parso==0.8.2
     # via jedi
+pep517==0.12.0
+    # via pip-tools
 pexpect==4.8.0
     # via ipython
 pickleshare==0.7.5
     # via ipython
-pip-tools==5.5.0
+pip-tools==6.4.0
     # via -r requirements-dev.in
 platformdirs==2.4.0
     # via pylint
-pluggy==1.0.0
-    # via
-    #   -c requirements.txt
-    #   python-language-server
-prompt-toolkit==3.0.10
+prompt-toolkit==3.0.23
     # via ipython
 ptyprocess==0.7.0
     # via pexpect
-pycodestyle==2.6.0
+pycodestyle==2.8.0
     # via
     #   autopep8
     #   flake8
-pyflakes==2.2.0
-    # via
-    #   flake8
-    #   python-language-server
-pygments==2.7.4
+pyflakes==2.4.0
+    # via flake8
+pygments==2.10.0
     # via ipython
 pylint-django==2.4.4
     # via -r requirements-dev.in
 pylint-plugin-utils==0.6
     # via pylint-django
-pylint==2.11.1
+pylint==2.12.1
     # via
     #   -r requirements-dev.in
     #   pylint-django
     #   pylint-plugin-utils
-python-jsonrpc-server==0.4.0
-    # via python-language-server
-python-language-server[mccabe,pyflakes,rope,yapf]==0.36.2
-    # via -r requirements-dev.in
 pytz==2021.3
     # via
     #   -c requirements.txt
     #   django
 pywatchman==1.4.1
     # via -r requirements-dev.in
-rope==0.18.0
-    # via python-language-server
 sqlparse==0.4.2
     # via
     #   -c requirements.txt
@@ -117,13 +104,19 @@ toml==0.10.2
     #   django-stubs
     #   mypy
     #   pylint
-traitlets==5.0.5
-    # via ipython
-types-pytz==2021.3.0
+tomli==1.2.2
+    # via
+    #   -c requirements.txt
+    #   pep517
+traitlets==5.1.1
+    # via
+    #   ipython
+    #   matplotlib-inline
+types-pytz==2021.3.1
     # via django-stubs
-types-pyyaml==6.0.0
+types-pyyaml==6.0.1
     # via django-stubs
-typing-extensions==3.10.0.2
+typing-extensions==4.0.0
     # via
     #   astroid
     #   django-stubs
@@ -131,16 +124,14 @@ typing-extensions==3.10.0.2
     #   graphene-stubs
     #   mypy
     #   pylint
-ujson==4.0.1
-    # via
-    #   python-jsonrpc-server
-    #   python-language-server
 wcwidth==0.2.5
     # via prompt-toolkit
-wrapt==1.13.2
-    # via astroid
-yapf==0.30.0
-    # via python-language-server
+wheel==0.37.0
+    # via pip-tools
+wrapt==1.13.3
+    # via
+    #   -c requirements.txt
+    #   astroid
 
 # The following packages are considered to be unsafe in a requirements file:
 # pip
