--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,6 @@
 #
 #    pip-compile requirements.in
 #
--e git+https://github.com/juyrjola/django-modelcluster.git#egg=django-modelcluster
-    # via
-    #   -r requirements.in
-    #   wagtail
 -e git+https://github.com/kausaltech/wagtail-orderable.git#egg=wagtail-orderable
     # via -r requirements.in
 aniso8601==7.0.0
@@ -20,7 +16,7 @@ asgiref==3.4.1
     # via django
 attrs==21.2.0
     # via pytest
-beautifulsoup4==4.8.2
+beautifulsoup4==4.9.3
     # via wagtail
 cachetools==4.2.4
     # via django-helusers
@@ -32,15 +28,15 @@ cffi==1.15.0
     # via
     #   cryptography
     #   milksnake
-charset-normalizer==2.0.7
+charset-normalizer==2.0.8
     # via requests
 coreapi==2.3.3
     # via -r requirements.in
 coreschema==0.0.4
     # via coreapi
-coverage[toml]==6.1.1
+coverage[toml]==6.2
     # via pytest-cov
-cryptography==35.0.0
+cryptography==36.0.0
     # via
     #   -r requirements.in
     #   social-auth-core
@@ -53,13 +49,15 @@ defusedxml==0.7.1
     #   odfpy
     #   python3-openid
     #   social-auth-core
+deprecated==1.2.13
+    # via redis
 deprecation==2.1.0
     # via django-helusers
 diff-match-patch==20200713
     # via django-import-export
 django-admin-numeric-filter==0.1.6
     # via -r requirements.in
-django-admin-ordering==0.14.1
+django-admin-ordering==0.14.2
     # via -r requirements.in
 django-anymail[mailgun,sendgrid]==8.4
     # via -r requirements.in
@@ -69,15 +67,15 @@ django-autocomplete-light==3.8.2
     # via
     #   -r requirements.in
     #   dal-admin-filters
-django-ckeditor==6.1.0
+django-ckeditor==6.2.0
     # via -r requirements.in
 django-cors-headers==3.10.0
     # via -r requirements.in
 django-environ==0.8.1
     # via -r requirements.in
-django-extensions==3.1.3
+django-extensions==3.1.5
     # via -r requirements.in
-django-filter==2.4.0
+django-filter==21.1
     # via
     #   -r requirements.in
     #   wagtail
@@ -91,11 +89,13 @@ django-js-asset==1.2.2
     # via
     #   django-admin-ordering
     #   django-ckeditor
+django-modelcluster==5.2
+    # via wagtail
 django-modeltrans==0.7.2
     # via -r requirements.in
 django-npm==1.0.0
     # via -r requirements.in
-django-parler==2.2.1
+django-parler==2.3
     # via -r requirements.in
 django-redis==5.0.0
     # via -r requirements.in
@@ -105,7 +105,7 @@ django-taggit==1.5.1
     # via wagtail
 django-treebeard==4.5.1
     # via wagtail
-django==3.1.13
+django==3.2.9
     # via
     #   -r requirements.in
     #   django-admin-numeric-filter
@@ -145,7 +145,7 @@ factory-boy==3.1.0
     #   -r requirements.in
     #   pytest-factoryboy
     #   wagtail-factories
-faker==9.8.0
+faker==9.9.0
     # via factory-boy
 graphene-django-optimizer==0.8.0
     # via -r requirements.in
@@ -165,21 +165,23 @@ graphql-relay==2.0.1
     # via graphene
 html5lib==1.1
     # via wagtail
-humanize==3.12.0
+humanize==3.13.1
     # via -r requirements.in
 idna==3.3
     # via requests
+importlib-metadata==4.8.2
+    # via markdown
 inflection==0.5.1
     # via pytest-factoryboy
 iniconfig==1.1.1
     # via pytest
 itypes==1.2.0
     # via coreapi
-jinja2==3.0.2
+jinja2==3.0.3
     # via
     #   -r requirements.in
     #   coreschema
-l18n==2020.6.1
+l18n==2021.3
     # via wagtail
 libvoikko==4.3
     # via -r requirements.in
@@ -187,7 +189,7 @@ lxml==4.6.4
     # via
     #   -r requirements.in
     #   svglib
-markdown==3.3.4
+markdown==3.3.6
     # via -r requirements.in
 markuppy==1.14
     # via tablib
@@ -203,7 +205,7 @@ odfpy==1.4.1
     # via tablib
 openpyxl==3.0.9
     # via tablib
-packaging==21.2
+packaging==21.3
     # via
     #   deprecation
     #   pytest
@@ -213,7 +215,7 @@ pillow==8.4.0
     #   easy-thumbnails
     #   reportlab
     #   wagtail
-plotly==5.3.1
+plotly==5.4.0
     # via -r requirements.in
 pluggy==1.0.0
     # via pytest
@@ -222,7 +224,7 @@ promise==2.3
     #   graphene-django
     #   graphql-core
     #   graphql-relay
-psycopg2-binary==2.9.1
+psycopg2-binary==2.9.2
     # via -r requirements.in
 py==1.11.0
     # via pytest
@@ -230,11 +232,11 @@ pyasn1==0.4.8
     # via
     #   python-jose
     #   rsa
-pycparser==2.20
+pycparser==2.21
     # via cffi
 pyjwt==2.3.0
     # via social-auth-core
-pyparsing==2.4.7
+pyparsing==3.0.6
     # via packaging
 pytest-cov==3.0.0
     # via -r requirements.in
@@ -264,9 +266,9 @@ pyyaml==6.0
     # via
     #   -r requirements.in
     #   tablib
-redis==3.5.3
+redis==4.0.2
     # via django-redis
-reportlab==3.6.2
+reportlab==3.6.3
     # via
     #   easy-thumbnails
     #   svglib
@@ -281,13 +283,13 @@ requests==2.26.0
     #   social-auth-core
     #   wagtail
     #   wagtail-generic-chooser
-rsa==4.7.2
+rsa==4.8
     # via python-jose
 rustface==0.1.0
     # via -r requirements.in
 rx==1.6.1
     # via graphql-core
-sentry-sdk==1.4.3
+sentry-sdk==1.5.0
     # via -r requirements.in
 singledispatch==3.7.0
     # via graphene-django
@@ -309,7 +311,7 @@ social-auth-app-django==5.0.0
     # via -r requirements.in
 social-auth-core==4.1.0
     # via social-auth-app-django
-soupsieve==2.3
+soupsieve==2.3.1
     # via beautifulsoup4
 sqlparse==0.4.2
     # via django
@@ -319,11 +321,13 @@ tablib[html,ods,xls,xlsx,yaml]==3.1.0
     # via
     #   django-import-export
     #   wagtail
+telepath==0.2
+    # via wagtail
 tenacity==8.0.1
     # via plotly
 text-unidecode==1.3
     # via faker
-tinycss2==1.1.0
+tinycss2==1.1.1
     # via
     #   -r requirements.in
     #   cssselect2
@@ -350,15 +354,15 @@ wagtail-condensedinlinepanel==0.5.3
     # via -r requirements.in
 wagtail-factories==2.0.1
     # via -r requirements.in
-wagtail-generic-chooser==0.3
+wagtail-generic-chooser==0.3.1
     # via -r requirements.in
-wagtail-grapple==0.11.0
+wagtail-grapple==0.12.0
     # via -r requirements.in
 wagtail-headless-preview==0.1.4
     # via wagtail-grapple
 wagtail-react-streamfield==1.3.6
     # via -r requirements.in
-wagtail==2.12.6
+wagtail==2.15.1
     # via
     #   -r requirements.in
     #   wagtail-autocomplete
@@ -377,12 +381,13 @@ webencodings==0.5.1
     #   tinycss2
 willow==1.4
     # via wagtail
+wrapt==1.13.3
+    # via deprecated
 xlrd==2.0.1
     # via tablib
-xlsxwriter==1.4.5
+xlsxwriter==3.0.2
     # via wagtail
 xlwt==1.3.0
     # via tablib
-
-# The following packages are considered to be unsafe in a requirements file:
-# setuptools
+zipp==3.6.0
+    # via importlib-metadata
