--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,20 @@
-version: '3.2'
+version: '3.3'
 services:
   db:
-    container_name: aplans-db
-    build:
-      context: .
-      dockerfile: ./docker/db/Dockerfile
-    restart: always
     environment:
-      - POSTGRES_USER=aplans
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-change_me}
+      - POSTGRES_USER
+      - POSTGRES_PASSWORD
     volumes:
       - db_data:/var/lib/postgresql/data/
 
-  redis:
-    container_name: 'redis'
-    build:
-      context: ./docker/redis
-      dockerfile: ./Dockerfile
-    restart: always
+  # redis is defined in override file
 
   app:
-    container_name: aplans
-    build:
-      context: .
-      dockerfile: docker/app/Dockerfile
-      args:
-        - EXTRA_PYPI_INDEX
-        - EXTRA_INSTALLED_APPS_VERSIONS
-    restart: always
     volumes:
       - aplans_media:/srv/media
     environment:
-      - DATABASE_URL=${DATABASE_URL:-postgres://aplans:change_me@db/aplans}
+      - ENV_FILE
+      - DATABASE_URL
       - CACHE_URL=rediscache://redis:6379
       - STATIC_ROOT=/srv/static
       - LC_CTYPE=C.UTF-8
@@ -52,9 +35,6 @@ services:
       - MAILGUN_REGION
       - EXTRA_INSTALLED_APPS
       - EXTRA_INSTALLED_APPS_URLS
-    ports:
-      - "${HOST_PORT:-8000}:8000"
-      - "${UWSGI_SOCKET_PORT:-8001}:8001"
     depends_on:
       - db
       - redis
