--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,7 +5,9 @@ jobs:
     name: Build Docker images, run tests and push to Docker registry
     runs-on: ubuntu-latest
     env:
+      APP_REPOSITORY: docker.kausal.tech/watch
       APP_IMAGE: docker.kausal.tech/watch
+      DB_REPOSITORY: docker.kausal.tech/watch-postgres
       DB_IMAGE: docker.kausal.tech/watch-postgres
       POSTGRES_PASSWORD: foobar123
       DATABASE_URL: postgres://watch:foobar123@db/watch
@@ -21,13 +23,22 @@ jobs:
       - name: Stop Postgres and Redis
         run: docker-compose down db redis
       - name: Log into Docker registry
-        if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/stage'
         uses: docker/login-action@v1
         with:
           registry: docker.kausal.tech
           username: docker
           # FIXME: Instead of using the password, we should probably switch to token authentication with limited scope
           password: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
-      - name: Push Docker images
+      - name: Push latest tag to Docker registry
         if: github.ref == 'refs/heads/master'
-        run: docker-compose push app db
+        run: |
+          docker push ${{ env.APP_REPOSITORY }}:latest
+          docker push ${{ env.DB_REPOSITORY }}:latest
+      - name: Add stage tag and push to registry
+        if: github.ref == 'refs/heads/stage'
+        run: |
+          docker tag ${{ env.APP_IMAGE }} ${{ env.APP_REPOSITORY }}:stage
+          docker tag ${{ env.DB_IMAGE }} ${{ env.DB_REPOSITORY }}:stage
+          docker push ${{ env.APP_REPOSITORY }}:stage
+          docker push ${{ env.DB_REPOSITORY }}:stage
