Add Github run number to Docker image tag

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -38,7 +38,7 @@ jobs:
       - name: Add stage tag and push to registry
         if: github.ref == 'refs/heads/stage'
         run: |
-          docker tag ${{ env.APP_IMAGE }} ${{ env.APP_REPOSITORY }}:stage
-          docker tag ${{ env.DB_IMAGE }} ${{ env.DB_REPOSITORY }}:stage
-          docker push ${{ env.APP_REPOSITORY }}:stage
-          docker push ${{ env.DB_REPOSITORY }}:stage
+          docker tag ${{ env.APP_IMAGE }} ${{ env.APP_REPOSITORY }}:stage-${{ github.run_number }}
+          docker tag ${{ env.DB_IMAGE }} ${{ env.DB_REPOSITORY }}:stage-${{ github.run_number }}
+          docker push ${{ env.APP_REPOSITORY }}:stage-${{ github.run_number }}
+          docker push ${{ env.DB_REPOSITORY }}:stage-${{ github.run_number }}
