--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,7 +23,7 @@ jobs:
       - name: Stop Postgres and Redis
         run: docker-compose down db redis
       - name: Log into Docker registry
-        if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/stage'
+        if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/deployment/staging'
         uses: docker/login-action@v1
         with:
           registry: docker.kausal.tech
@@ -35,10 +35,10 @@ jobs:
         run: |
           docker push ${{ env.APP_REPOSITORY }}:latest
           docker push ${{ env.DB_REPOSITORY }}:latest
-      - name: Add stage tag and push to registry
-        if: github.ref == 'refs/heads/stage'
+      - name: Add staging tag and push to registry
+        if: github.ref == 'refs/heads/deployment/staging'
         run: |
-          docker tag ${{ env.APP_IMAGE }} ${{ env.APP_REPOSITORY }}:stage-${{ github.run_number }}
-          docker tag ${{ env.DB_IMAGE }} ${{ env.DB_REPOSITORY }}:stage-${{ github.run_number }}
-          docker push ${{ env.APP_REPOSITORY }}:stage-${{ github.run_number }}
-          docker push ${{ env.DB_REPOSITORY }}:stage-${{ github.run_number }}
+          docker tag ${{ env.APP_IMAGE }} ${{ env.APP_REPOSITORY }}:staging-${{ github.run_number }}
+          docker tag ${{ env.DB_IMAGE }} ${{ env.DB_REPOSITORY }}:staging-${{ github.run_number }}
+          docker push ${{ env.APP_REPOSITORY }}:staging-${{ github.run_number }}
+          docker push ${{ env.DB_REPOSITORY }}:staging-${{ github.run_number }}
