--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,10 @@ cffi==1.15.0
     #   milksnake
 charset-normalizer==2.0.8
     # via requests
+colorama==0.4.4
+    # via rich
+commonmark==0.9.1
+    # via rich
 coreapi==2.3.3
     # via -r requirements.in
 coreschema==0.0.4
@@ -237,6 +241,8 @@ pyasn1==0.4.8
     #   rsa
 pycparser==2.21
     # via cffi
+pygments==2.11.2
+    # via rich
 pyjwt==2.3.0
     # via social-auth-core
 pyparsing==3.0.6
@@ -286,6 +292,8 @@ requests==2.26.0
     #   wagtail-generic-chooser
 requests-oauthlib==1.3.0
     # via social-auth-core
+rich==11.2.0
+    # via -r requirements.in
 rsa==4.8
     # via python-jose
 rustface==0.1.0
