--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,6 +70,8 @@ services:
       - discovery.type=single-node
       - xpack.security.enabled=true
       - ELASTIC_PASSWORD
+    # Default memory limit to 1024 MiB
+    mem_limit: ${ELASTIC_MEM_LIMIT:-1073741824}
 
 volumes:
   db_data:
