Integrate elasticsearch image into GitHub Actions

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,6 +59,7 @@ services:
       - redis
 
   elasticsearch:
+    image: ${ELASTICSEARCH_IMAGE-kausal-watch-elasticsearch}
     build:
       context: ./docker/elasticsearch
       dockerfile: ./Dockerfile
