--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,6 +9,8 @@ jobs:
       APP_IMAGE: docker.kausal.tech/watch
       DB_REPOSITORY: docker.kausal.tech/watch-postgres
       DB_IMAGE: docker.kausal.tech/watch-postgres
+      ELASTICSEARCH_REPOSITORY: docker.kausal.tech/watch-elasticsearch
+      ELASTICSEARCH_IMAGE: docker.kausal.tech/watch-elasticsearch
       POSTGRES_PASSWORD: foobar123
       DATABASE_URL: postgres://watch:foobar123@db/watch
     steps:
@@ -35,10 +37,13 @@ jobs:
         run: |
           docker push ${{ env.APP_REPOSITORY }}:latest
           docker push ${{ env.DB_REPOSITORY }}:latest
+          docker push ${{ env.ELASTICSEARCH_REPOSITORY }}:latest
       - name: Add staging tag and push to registry
         if: github.ref == 'refs/heads/deployment/staging'
         run: |
           docker tag ${{ env.APP_IMAGE }} ${{ env.APP_REPOSITORY }}:staging-${{ github.run_number }}
           docker tag ${{ env.DB_IMAGE }} ${{ env.DB_REPOSITORY }}:staging-${{ github.run_number }}
+          docker tag ${{ env.ELASTICSEARCH_IMAGE }} ${{ env.ELASTICSEARCH_REPOSITORY }}:staging-${{ github.run_number }}
           docker push ${{ env.APP_REPOSITORY }}:staging-${{ github.run_number }}
           docker push ${{ env.DB_REPOSITORY }}:staging-${{ github.run_number }}
+          docker push ${{ env.ELASTICSEARCH_REPOSITORY }}:staging-${{ github.run_number }}
