--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,6 +13,9 @@ jobs:
       ELASTICSEARCH_IMAGE: docker.kausal.tech/watch-elasticsearch
       POSTGRES_PASSWORD: foobar123
       DATABASE_URL: postgres://watch:foobar123@db/watch
+      EXTRA_PYPI_INDEX: ${{ secrets.EXTRA_PYPI_INDEX }}
+      EXTRA_INSTALLED_APPS_VERSIONS: kausal-watch-extensions==0.1.3
+      EXTRA_INSTALLED_APPS: kausal_watch_extensions
     steps:
       - name: Check out code
         uses: actions/checkout@v2
