Enable translating pages and content for multilingual plans

--- a/requirements.in
+++ b/requirements.in
@@ -43,6 +43,7 @@ wagtail
 wagtail-autocomplete
 wagtailfontawesome
 wagtail-generic-chooser
+wagtail-localize
 rustface
 django-npm
 django-autocomplete-light
