--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -35,6 +35,7 @@ RUN npm install
 
 ARG EXTRA_PYPI_INDEX
 ARG EXTRA_INSTALLED_APPS_VERSIONS
+ARG EXTRA_INSTALLED_APPS
 
 # Install extra dependencies
 RUN if [ ! -z "$EXTRA_INSTALLED_APPS_VERSIONS" ] ; then pip install --extra-index-url "${EXTRA_PYPI_INDEX}" $EXTRA_INSTALLED_APPS_VERSIONS ; fi
