--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,6 +17,7 @@ jobs:
       EXTRA_INSTALLED_APPS_VERSIONS: kausal-watch-extensions==0.1.3
       EXTRA_INSTALLED_APPS: kausal_watch_extensions
       DOCKER_BUILDKIT: 1
+      BUILDKIT_PROGRESS: plain
     steps:
       - name: Check out code
         uses: actions/checkout@v2
