--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,7 @@ services:
       - STATIC_ROOT=/srv/static
       - LC_CTYPE=C.UTF-8
       - DEBUG
+      - DEPLOYMENT_TYPE
       - ALLOWED_HOSTS
       - COOKIE_PREFIX
       - INTERNAL_IPS
