Fix some mypy complaints

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,7 @@ filterwarnings =
 [mypy]
 plugins =
     mypy_django_plugin.main
+ignore_missing_imports = True
 
 [mypy.plugins.django-stubs]
 django_settings_module = "aplans.settings"
