--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@
 #
 #    pip-compile requirements.in
 #
+-e git+https://github.com/kausaltech/django-modeltrans.git@wip/default-language-field#egg=django-modeltrans
+    # via -r requirements.in
 -e git+https://github.com/kausaltech/wagtail-orderable.git#egg=wagtail-orderable
     # via -r requirements.in
 amqp==5.1.1
@@ -140,8 +142,6 @@ django-js-asset==2.0.0
     #   django-ckeditor
 django-modelcluster==5.2
     # via wagtail
-django-modeltrans==0.7.2
-    # via -r requirements.in
 django-npm==1.0.0
     # via -r requirements.in
 django-parler==2.3
