--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,6 @@
 #
 #    pip-compile requirements.in
 #
--e git+https://github.com/kausaltech/django-modeltrans.git#egg=django-modeltrans
-    # via -r requirements.in
--e git+https://github.com/kausaltech/wagtail-orderable.git#egg=wagtail-orderable
-    # via -r requirements.in
 amqp==5.1.1
     # via kombu
 aniso8601==7.0.0
@@ -142,6 +138,8 @@ django-js-asset==2.0.0
     #   django-ckeditor
 django-modelcluster==5.2
     # via wagtail
+django-modeltrans @ git+https://github.com/kausaltech/django-modeltrans.git
+    # via -r requirements.in
 django-npm==1.0.0
     # via -r requirements.in
 django-parler==2.3
@@ -429,6 +427,8 @@ wagtail-grapple==0.12.0
 wagtail-headless-preview==0.2.1
     # via wagtail-grapple
 wagtail-localize==1.1
+    # via -r requirements.in
+wagtail-orderable @ git+https://github.com/kausaltech/wagtail-orderable.git
     # via -r requirements.in
 wagtailfontawesome==1.2.1
     # via -r requirements.in
