--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,11 +4,11 @@
 #
 #    pip-compile requirements-dev.in
 #
-asgiref==3.5.0
+asgiref==3.5.2
     # via
     #   -c requirements.txt
     #   django
-astroid==2.9.0
+astroid==2.11.5
     # via pylint
 asttokens==2.0.5
     # via stack-data
@@ -16,20 +16,22 @@ autopep8==1.6.0
     # via -r requirements-dev.in
 backcall==0.2.0
     # via ipython
-click==8.1.2
+click==8.1.3
     # via
     #   -c requirements.txt
     #   pip-tools
-decorator==5.1.0
+decorator==5.1.1
     # via ipython
-django==3.2.12
+dill==0.3.4
+    # via pylint
+django==3.2.13
     # via
     #   -c requirements.txt
     #   django-stubs
     #   django-stubs-ext
-django-stubs==1.9.0
+django-stubs==1.10.1
     # via -r requirements-dev.in
-django-stubs-ext==0.3.1
+django-stubs-ext==0.4.0
     # via django-stubs
 executing==0.8.3
     # via stack-data
@@ -37,7 +39,7 @@ flake8==4.0.1
     # via -r requirements-dev.in
 graphene-stubs==0.15
     # via -r requirements-dev.in
-ipython==8.1.0
+ipython==8.3.0
     # via -r requirements-dev.in
 isort==5.10.1
     # via
@@ -45,7 +47,7 @@ isort==5.10.1
     #   pylint
 jedi==0.18.1
     # via ipython
-lazy-object-proxy==1.6.0
+lazy-object-proxy==1.7.1
     # via astroid
 matplotlib-inline==0.1.3
     # via ipython
@@ -53,14 +55,14 @@ mccabe==0.6.1
     # via
     #   flake8
     #   pylint
-mypy==0.910
+mypy==0.942
     # via
     #   -r requirements-dev.in
     #   django-stubs
     #   graphene-stubs
 mypy-extensions==0.4.3
     # via mypy
-parso==0.8.2
+parso==0.8.3
     # via jedi
 pep517==0.12.0
     # via pip-tools
@@ -68,9 +70,9 @@ pexpect==4.8.0
     # via ipython
 pickleshare==0.7.5
     # via ipython
-pip-tools==6.5.1
+pip-tools==6.6.1
     # via -r requirements-dev.in
-platformdirs==2.4.0
+platformdirs==2.5.2
     # via pylint
 prompt-toolkit==3.0.29
     # via
@@ -86,20 +88,20 @@ pycodestyle==2.8.0
     #   flake8
 pyflakes==2.4.0
     # via flake8
-pygments==2.11.2
+pygments==2.12.0
     # via
     #   -c requirements.txt
     #   ipython
-pylint==2.12.1
+pylint==2.13.9
     # via
     #   -r requirements-dev.in
     #   pylint-django
     #   pylint-plugin-utils
-pylint-django==2.4.4
+pylint-django==2.5.3
     # via -r requirements-dev.in
-pylint-plugin-utils==0.6
+pylint-plugin-utils==0.7
     # via pylint-django
-pytz==2021.3
+pytz==2022.1
     # via
     #   -c requirements.txt
     #   django
@@ -116,25 +118,25 @@ sqlparse==0.4.2
 stack-data==0.2.0
     # via ipython
 toml==0.10.2
-    # via
-    #   autopep8
-    #   django-stubs
-    #   mypy
-    #   pylint
+    # via autopep8
 tomli==2.0.1
     # via
     #   -c requirements.txt
+    #   django-stubs
+    #   mypy
     #   pep517
-traitlets==5.1.1
+    #   pylint
+traitlets==5.2.1.post0
     # via
     #   ipython
     #   matplotlib-inline
-types-pytz==2021.3.1
+types-pytz==2021.3.8
     # via django-stubs
-types-pyyaml==6.0.1
+types-pyyaml==6.0.7
     # via django-stubs
-typing-extensions==4.0.0
+typing-extensions==4.2.0
     # via
+    #   -c requirements.txt
     #   django-stubs
     #   django-stubs-ext
     #   graphene-stubs
@@ -143,9 +145,9 @@ wcwidth==0.2.5
     # via
     #   -c requirements.txt
     #   prompt-toolkit
-wheel==0.37.0
+wheel==0.37.1
     # via pip-tools
-wrapt==1.13.3
+wrapt==1.14.1
     # via
     #   -c requirements.txt
     #   astroid
