--- a/requirements.txt
+++ b/requirements.txt
@@ -10,10 +10,14 @@ aniso8601==7.0.0
     # via
     #   -r requirements.in
     #   graphene
-anyascii==0.3.0
+anyascii==0.3.1
     # via wagtail
-asgiref==3.5.0
+appdirs==1.4.4
+    # via pytest-factoryboy
+asgiref==3.5.2
     # via django
+async-timeout==4.0.2
+    # via redis
 attrs==21.4.0
     # via
     #   jsonschema
@@ -22,7 +26,7 @@ beautifulsoup4==4.9.3
     # via wagtail
 billiard==3.6.4.0
     # via celery
-cachetools==5.0.0
+cachetools==5.1.0
     # via django-helusers
 celery==5.2.6
     # via -r requirements.in
@@ -37,7 +41,7 @@ cffi==1.15.0
     #   milksnake
 charset-normalizer==2.0.12
     # via requests
-click==8.1.2
+click==8.1.3
     # via
     #   celery
     #   click-didyoumean
@@ -49,21 +53,19 @@ click-plugins==1.1.1
     # via celery
 click-repl==0.2.0
     # via celery
-colorama==0.4.4
-    # via rich
 commonmark==0.9.1
     # via rich
 coreapi==2.3.3
     # via -r requirements.in
 coreschema==0.0.4
     # via coreapi
-coverage[toml]==6.3.2
+coverage[toml]==6.3.3
     # via pytest-cov
-cryptography==36.0.1
+cryptography==37.0.2
     # via
     #   -r requirements.in
     #   social-auth-core
-cssselect2==0.4.1
+cssselect2==0.6.0
     # via svglib
 dal-admin-filters==1.1.0
     # via -r requirements.in
@@ -78,12 +80,13 @@ deprecation==2.1.0
     # via django-helusers
 diff-match-patch==20200713
     # via django-import-export
-django==3.2.12
+django==3.2.13
     # via
     #   -r requirements.in
     #   django-admin-numeric-filter
     #   django-anymail
     #   django-appconf
+    #   django-ckeditor
     #   django-cors-headers
     #   django-extensions
     #   django-filter
@@ -107,19 +110,19 @@ django==3.2.12
     #   wagtailfontawesome
 django-admin-numeric-filter==0.1.6
     # via -r requirements.in
-django-admin-ordering==0.14.2
+django-admin-ordering==0.15.0
     # via -r requirements.in
-django-anymail[mailgun,sendgrid]==8.5
+django-anymail[mailgun,sendgrid]==8.6
     # via -r requirements.in
 django-appconf==1.0.5
     # via django-image-cropping
-django-autocomplete-light==3.9.1
+django-autocomplete-light==3.9.4
     # via
     #   -r requirements.in
     #   dal-admin-filters
-django-ckeditor==6.2.0
+django-ckeditor==6.4.0
     # via -r requirements.in
-django-cors-headers==3.11.0
+django-cors-headers==3.12.0
     # via -r requirements.in
 django-environ==0.8.1
     # via -r requirements.in
@@ -129,17 +132,17 @@ django-filter==21.1
     # via
     #   -r requirements.in
     #   wagtail
-django-helusers==0.7.0
+django-helusers==0.7.1
     # via -r requirements.in
 django-image-cropping==1.7
     # via -r requirements.in
-django-import-export==2.7.1
+django-import-export==2.8.0
     # via -r requirements.in
 django-js-asset==2.0.0
     # via
     #   django-admin-ordering
     #   django-ckeditor
-django-modelcluster==5.2
+django-modelcluster==5.3
     # via wagtail
 django-modeltrans @ git+https://github.com/kausaltech/django-modeltrans.git
     # via -r requirements.in
@@ -151,7 +154,7 @@ django-redis==5.2.0
     # via -r requirements.in
 django-reversion==5.0.0
     # via -r requirements.in
-django-taggit==1.5.1
+django-taggit==2.1.0
     # via wagtail
 django-treebeard==4.5.1
     # via wagtail
@@ -171,7 +174,7 @@ easy-thumbnails==2.8.1
     # via -r requirements.in
 ecdsa==0.17.0
     # via python-jose
-elasticsearch==7.17.0
+elasticsearch==7.17.3
     # via
     #   -r requirements.in
     #   elasticsearch-dsl
@@ -179,12 +182,12 @@ elasticsearch-dsl==7.4.0
     # via -r requirements.in
 et-xmlfile==1.1.0
     # via openpyxl
-factory-boy==3.1.0
+factory-boy==3.2.1
     # via
     #   -r requirements.in
     #   pytest-factoryboy
     #   wagtail-factories
-faker==13.0.0
+faker==13.11.1
     # via factory-boy
 graphene==2.1.9
     # via graphene-django
@@ -204,7 +207,7 @@ graphql-relay==2.0.1
     # via graphene
 html5lib==1.1
     # via wagtail
-humanize==4.0.0
+humanize==4.1.0
     # via -r requirements.in
 idna==3.3
     # via requests
@@ -216,7 +219,7 @@ iniconfig==1.1.1
     # via pytest
 itypes==1.2.0
     # via coreapi
-jinja2==3.0.3
+jinja2==3.1.2
     # via
     #   -r requirements.in
     #   coreschema
@@ -232,12 +235,16 @@ lxml==4.8.0
     # via
     #   -r requirements.in
     #   svglib
-markdown==3.3.6
+mako==1.2.0
+    # via pytest-factoryboy
+markdown==3.3.7
     # via -r requirements.in
 markuppy==1.14
     # via tablib
-markupsafe==2.1.0
-    # via jinja2
+markupsafe==2.1.1
+    # via
+    #   jinja2
+    #   mako
 milksnake==0.1.5
     # via rustface
 oauthlib==3.2.0
@@ -253,13 +260,13 @@ packaging==21.3
     #   deprecation
     #   pytest
     #   redis
-pillow==9.0.1
+pillow==9.1.1
     # via
     #   -r requirements.in
     #   easy-thumbnails
     #   reportlab
     #   wagtail
-plotly==5.6.0
+plotly==5.8.0
     # via -r requirements.in
 pluggy==1.0.0
     # via pytest
@@ -282,19 +289,19 @@ pyasn1==0.4.8
     #   rsa
 pycparser==2.21
     # via cffi
-pygments==2.11.2
+pygments==2.12.0
     # via
     #   pygments-graphql
     #   rich
 pygments-graphql==1.0.0
     # via -r requirements.in
-pyjwt==2.3.0
+pyjwt==2.4.0
     # via social-auth-core
-pyparsing==3.0.7
+pyparsing==3.0.9
     # via packaging
 pyrsistent==0.18.1
     # via jsonschema
-pytest==7.0.1
+pytest==7.1.2
     # via
     #   pytest-cov
     #   pytest-django
@@ -303,7 +310,7 @@ pytest-cov==3.0.0
     # via -r requirements.in
 pytest-django==4.5.2
     # via -r requirements.in
-pytest-factoryboy==2.1.0
+pytest-factoryboy==2.3.0
     # via -r requirements.in
 python-dateutil==2.8.2
     # via
@@ -315,7 +322,7 @@ python-jose==3.3.0
     #   django-helusers
 python3-openid==3.2.0
     # via social-auth-core
-pytz==2021.3
+pytz==2022.1
     # via
     #   celery
     #   django
@@ -327,9 +334,9 @@ pyyaml==6.0
     #   -r requirements.in
     #   drf-spectacular
     #   tablib
-redis==4.1.4
+redis==4.3.1
     # via django-redis
-reportlab==3.6.7
+reportlab==3.6.9
     # via
     #   easy-thumbnails
     #   svglib
@@ -344,7 +351,7 @@ requests==2.27.1
     #   wagtail-generic-chooser
 requests-oauthlib==1.3.1
     # via social-auth-core
-rich==11.2.0
+rich==12.4.1
     # via -r requirements.in
 rsa==4.8
     # via python-jose
@@ -352,7 +359,7 @@ rustface==0.1.0
     # via -r requirements.in
 rx==1.6.1
     # via graphql-core
-sentry-sdk==1.5.5
+sentry-sdk==1.5.12
     # via -r requirements.in
 singledispatch==3.7.0
     # via graphene-django
@@ -368,7 +375,6 @@ six==1.16.0
     #   graphql-relay
     #   html5lib
     #   l18n
-    #   plotly
     #   promise
     #   python-dateutil
     #   singledispatch
@@ -376,13 +382,13 @@ social-auth-app-django==5.0.0
     # via -r requirements.in
 social-auth-core==4.2.0
     # via social-auth-app-django
-soupsieve==2.3.1
+soupsieve==2.3.2.post1
     # via beautifulsoup4
 sqlparse==0.4.2
     # via django
-svglib==1.2.1
+svglib==1.3.0
     # via easy-thumbnails
-tablib[html,ods,xls,xlsx,yaml]==3.2.0
+tablib[html,ods,xls,xlsx,yaml]==3.2.1
     # via
     #   django-import-export
     #   wagtail
@@ -399,14 +405,16 @@ tomli==2.0.1
     # via
     #   coverage
     #   pytest
-unidecode==1.3.3
+typing-extensions==4.2.0
+    # via pytest-factoryboy
+unidecode==1.3.4
     # via graphene-django
 uritemplate==4.1.1
     # via
     #   -r requirements.in
     #   coreapi
     #   drf-spectacular
-urllib3==1.26.8
+urllib3==1.26.9
     # via
     #   elasticsearch
     #   requests
@@ -416,7 +424,7 @@ vine==5.0.0
     #   amqp
     #   celery
     #   kombu
-wagtail==2.15.4
+wagtail==2.16.2
     # via
     #   -r requirements.in
     #   wagtail-autocomplete
@@ -428,7 +436,7 @@ wagtail==2.15.4
     #   wagtailfontawesome
 wagtail-admin-list-controls==0.1.7
     # via -r requirements.in
-wagtail-autocomplete==0.7.0
+wagtail-autocomplete==0.8.1
     # via -r requirements.in
 wagtail-condensedinlinepanel==0.5.3
     # via -r requirements.in
@@ -436,11 +444,11 @@ wagtail-factories==2.0.1
     # via -r requirements.in
 wagtail-generic-chooser==0.3.1
     # via -r requirements.in
-wagtail-grapple==0.12.0
+wagtail-grapple==0.14.1
     # via -r requirements.in
 wagtail-headless-preview==0.2.1
     # via wagtail-grapple
-wagtail-localize==1.1
+wagtail-localize==1.1.2
     # via -r requirements.in
 wagtail-orderable @ git+https://github.com/kausaltech/wagtail-orderable.git
     # via -r requirements.in
@@ -453,13 +461,13 @@ webencodings==0.5.1
     #   cssselect2
     #   html5lib
     #   tinycss2
-willow==1.4
+willow==1.4.1
     # via wagtail
-wrapt==1.13.3
+wrapt==1.14.1
     # via deprecated
 xlrd==2.0.1
     # via tablib
-xlsxwriter==3.0.2
+xlsxwriter==3.0.3
     # via wagtail
 xlwt==1.3.0
     # via tablib
