--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -19,6 +19,8 @@ RUN apt-get install -y python3.9 python3-pip libpython3.9-dev \
 
 RUN apt-get install -y voikko-fi libvoikko1 libhfstospell11
 
+RUN apt-get install -y binutils libproj-dev gdal-bin
+
 RUN ln -fs /usr/bin/python3.9 /usr/bin/python3
 RUN ln -fs /usr/bin/python3 /usr/bin/python
 RUN ln -fs /usr/bin/pip3 /usr/bin/pip
