--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,7 +12,7 @@ jobs:
       ELASTICSEARCH_REPOSITORY: docker.kausal.tech/watch-elasticsearch
       ELASTICSEARCH_IMAGE: docker.kausal.tech/watch-elasticsearch
       POSTGRES_PASSWORD: foobar123
-      DATABASE_URL: postgres://watch:foobar123@db/watch
+      DATABASE_URL: postgis://watch:foobar123@db/watch
       EXTRA_PYPI_INDEX: ${{ secrets.EXTRA_PYPI_INDEX }}
       DOCKER_BUILDKIT: 1
       BUILDKIT_PROGRESS: plain
