--- a/requirements.txt
+++ b/requirements.txt
@@ -444,7 +444,9 @@ wagtail-condensedinlinepanel==0.5.3
 wagtail-factories==2.0.1
     # via -r requirements.in
 wagtail-generic-chooser==0.3.1
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   wagtailsvg
 wagtail-grapple==0.14.1
     # via -r requirements.in
 wagtail-headless-preview==0.2.1
@@ -456,6 +458,8 @@ wagtail-orderable @ git+https://github.com/kausaltech/wagtail-orderable.git
 wagtailfontawesome==1.2.1
     # via -r requirements.in
 wagtailgeowidget==6.1.0
+    # via -r requirements.in
+wagtailsvg==0.0.32
     # via -r requirements.in
 wcwidth==0.2.5
     # via prompt-toolkit
