Remove recently introduced default values for environment variables
These values interfere with our overrides. For example, if we set
`POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-watchpass}` for the DB service in
docker-compose.yml, then both `POSTGRES_PASSWORD` and
`POSTGRES_PASSWORD_FILE` will be set. The former because the default
`watchpass` will kick in; the latter because we set it to the Docker
config in our override file. The postgres image aborts with an error if
both are specified.

Moreover, it may potentially confusing for us if we inspect a service,
find that, e.g., for the Watch app service, `DATABASE_URL` is set to
some value, but it's actually ignored because we happen to also set
`ENV_FILE`, which sets a different value. This can easily be overlooked.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 x-django-environment: &django-environment
   - ENV_FILE
-  - DATABASE_URL=${DATABASE_URL:-postgis://watch:watchpass@db/watch}
+  - DATABASE_URL
   - CACHE_URL=rediscache://redis:6379
   - STATIC_ROOT=/srv/static
   - LC_CTYPE=C.UTF-8
@@ -44,7 +44,7 @@ services:
     restart: always
     environment:
       - POSTGRES_USER=watch
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-watchpass}
+      - POSTGRES_PASSWORD
     volumes:
       - db_data:/var/lib/postgresql/data/
 
