--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ __pycache__/
 /tmp
 /*.bz2
 /*.xlsx
-/.env
+/.env*
 /venv/
 /Attic/
 /media/
@@ -18,7 +18,6 @@ __pycache__/
 /data/
 /.vscode/
 /.idea/
-/.envrc
 /.direnv/
 tags
 /docker-compose.override.yml
